test_suite/syntax_test_cases/reservedWords7.wacc
# reserved keywords

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  bool free = true
end
